--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 }
 
 header{
-	background-color: #CCCCCC;
+	background-color: black;
 	width: 100%;
 	height: 4em;
 	
@@ -38,9 +38,10 @@ ul{
 }
 li{
 	display: inline-block;
-	color: black;
+	color:#866100 ;
 	margin-top: 5px;
 	cursor: pointer;
+	margin: 10px;
 }
 h4{
 	float: left;
@@ -59,6 +60,20 @@ p{
 }
 img{
 	margin: 7px;
+
+}
+button{
+	background-color: #987828;
+	border-color: black;
+
+}
+button:hover{
+	background:#040402 ;
+	border-color: #987828;
+
+}
+li:hover{
+	color: #CCCCCC;
 }
 .columnas-info{
 	
@@ -68,16 +83,32 @@ img{
 	text-align: left;
 	margin: 10px;
 }
+.btn{
+	padding: 5px;
+	margin-top: 20px;
+	border-radius: 5px;
 
+}
+.btn:hover{
+	color:#CCCCCC ;
+	border-color:#987828; 
+}
 .Tarjetas img{
-	width: 70%;
+	width: 95%;
 	height: 200px;
 	padding: 0;
+	border-style: outset;
+
 }
 
 .texto{
 	margin: 10px;
+	padding: 10px;
+	border-radius:6px;
 
+}
+.texto:hover{
+	color: #987828;
 }
 .tarjetas-img{
 	border: 2px solid #fff;
@@ -88,61 +119,6 @@ img{
 	padding: 10%;
 	text-align: center;
 	color: #866100;
-}
-
-/*@media (max-width: 1400px) and (min-width: 400px){
-	.menu-der{
-		display: inline-block;
-	}
-	.izquierda img{
-
-   	width: 8%;
-   }
-
-	#btn{
-		display: none;
-	}
-	.columnas{
-		margin-left: 20px;
-	}
-}
-@media (max-width: 767px) and (min-width: 576px){
-	 h1{
-
-	font-size: 2em;
-	margin-top: 0%;
-	text-align: center;
-	
-   }
-   .btn{
-   	display: none;
-   }
-
-}
-@media (max-width: 767px) and (min-width: 576px){
-	.menu-der{
-		display: none;
-
-	}
-	.navegador{
-		float: right;
-		display: inline-block;
-	}
-	.columnas{
-		margin-left:0;
-		
-	}
-	.imagenes-3{
-		margin-left: 0;
-		height: 180px;
-	    background-size: 150% auto;
-	    background-position: center -20px;
-
-	}
-	.btn{
-		display: inline-block;
-		position: center;
-	}
 }
 
 
