--- a/css/style.css
+++ b/css/style.css
@@ -121,11 +121,20 @@ li:hover{
 	color: #866100;
 }
 
+@media only screen {
+	small-1:display-
+
+}
 
 
+[12:30] 
+y en @media only screen and (min-width: 600px) {
 
 
+[12:30] 
+pones q sea blick o inlineblok
 
 
-
+[12:30] 
+blick jajaj
 
